<resources>
    <string name="app_name">Skillassure</string>
    <string name="welcome">Welcome to Skillassure</string>
    <string name="Slogn">We’ve got what you need !</string>
    <string name="Slogn2">A Descoveri Program with  Tealent Accelerator,Startup, incubator ,grab your chance to be with us in your entrepreneurship track</string>
    <string name="login">Login</string>
    <string name="donthaveaccount">Don\'t have an Account ?</string>
    <string name="signup">SignUp</string>
    <string name="logo">logo</string>
    <string name="NoInternet">Not Connected To Internet !</string>
    <string name="InternetDes">Make sure your Mobile data or wifi is enabled</string>
    <string name="Connect">Connect</string>
    <string name="simle">smile</string>
    <string name="ProvideDetails">Please provide your Credentials</string>
    <string name="EmailAddress">Email Address you used to register with skillassure</string>
    <string name="Email_ID">Email-ID</string>
    <string name="google">Google</string>
    <string name="LinkedIn">Linked In</string>
    <string name="logingust">Continue with Gest account</string>
    <string name="Password">Password</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_dash_board">DashBoard</string>
    <string name="signIn">SignIn</string>
    <string name="CreateAccount">Create an Account</string>
    <string name="EnterDetails">Please enter the following details to create your account</string>
    <string name="FullName">Full Name</string>
    <string name="UserName">User Name</string>
    <string name="SendActivationCode">we just send an activation coder on your email id </string>
    <string name="ActivateAccount">Activate Account</string>
    <string name="Verify">Verify</string>
    <string name="ResendCode">Resend activation code</string>
    <string name="Resend">Resend</string>
    <string name="my_categories">My Categories</string>
    <string name="MyProgress">My Progress</string>
    <string name="Mycourses">My courses</string>
    <string name="date">Date : </string>
    <string name="Time">Time : </string>
    <string name="MyAssessments">My Assessments</string>
    <string name="helloworld">HelloWorld</string>
    <string name="StartCourse">Start Course</string>
    <string name="Lorems">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Amet imperdiet integer metus dis eget. Tincidunt velit sit pellentesque tellus. Adipiscing donec ipsum interdum eu, maecenas facilisis. Donec ac aliquam id vitae vestibulum suscipit accumsan. Neque eleifend nulla sed fringilla dignissim amet libero purus. Tortor, consectetur iaculis lectus quis ultrices vivamus quam. Morbi sapien auctor ut nam ac tempor, cursus amet. Vestibulum massa est sed enim vitae massa nisl. Neque feugiat varius adipiscing diam quam mi, blandit. Phasellus maecenas platea eget nec lobortis quis nascetur.</string>
    <string name="Docs">Docs</string>
    <string name="Videos">Videos</string>
    <string name="Labs">Labs</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Prerequisite">Prerequisite</string>
    <string name="disagree">DisAgree</string>
    <string name="Agree">Agree</string>
    <string name="agreeprerequisite">Agree Prerequisite !</string>
    <string name="WithoutAgree">Without agree prerequisite you cannot start assessment</string>
    <string name="mintsleft">Minutes Left</string>
    <string name="submit">Submit</string>
    <string name="Thankyou">Thankyou</string>
    <string name="submitted">Your assessment is submitted successfully</string>
    <string name="resultDeclared">your result will be declared in report card</string>
    <string name="Dashboard">Dashboard</string>
    <string name="MyReportCard">My Report Card</string>
    <string name="correct">Correct : </string>
    <string name="Incorrect">Incorrect</string>
    <string name="percentage">%</string>
    <string name="ans">"Ans : "</string>
    <string name="YourIncorrectAnswer">Your incorrect answer are</string>
    <string name="yourprogress">YourProgress</string>
    <string name="yourprogressMeasured">Your Progress is measured on the basics of your last week and this week performance</string>
    <string name="Code">Code</string>
    <string name="Profile">Profile</string>
    <string name="Setting">Setting</string>
    <string name="Feedback">Feedback</string>
    <string name="HelpAndSupport">Help and Support</string>
    <string name="Share">Share</string>
    <string name="Logout">Logout</string>
</resources>