<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:src="@drawable/logoskillassure"/>
    <com.mjs.skillassure.Utilities.LatoBlackText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:layout_marginTop="30dp"
        android:textColor="@color/shadow_black"
        android:text="@string/Thankyou"/>
    <com.mjs.skillassure.Utilities.LatoBoldText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:textColor="@color/shadow_black2"
        android:text="@string/submitted"/>

    <com.mjs.skillassure.Utilities.LatoBoldText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="@color/light_blue"
        android:text="@string/resultDeclared"/>
    <Button
        android:id="@+id/dashboard_button"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:textAllCaps="false"
        android:text="@string/Dashboard"
        android:layout_marginTop="30dp"/>


</LinearLayout>