<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PresentationLayer.Activities.VerifyActivitionCode">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="26dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logoskillassure"
            android:layout_marginTop="50dp"
            android:layout_gravity="center_horizontal"
            />

        <com.mjs.skillassure.Utilities.LatoBoldText
            android:id="@+id/latoBoldText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ActivateAccount"
            android:textColor="@color/light_black"
            android:layout_marginTop="50dp"
            android:layout_gravity="center_horizontal"
            android:textSize="22sp"
            tools:layout_editor_absoluteX="94dp" />

        <com.mjs.skillassure.Utilities.LatoSemiBoldText
            android:id="@+id/latoSemiBoldText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/shadow_black"
            android:textSize="16sp"
            android:layout_marginTop="30dp"
            android:text="@string/SendActivationCode"
            app:layout_constraintTop_toBottomOf="@+id/latoBoldText" />
        <com.mjs.skillassure.Utilities.LatoSemiBoldText
            android:id="@+id/email_id_text"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:textColor="@color/sky_blue_dark"
            app:layout_constraintTop_toBottomOf="@+id/latoBoldText" />

        <com.mjs.skillassure.Utilities.LatoBoldEditText
            android:id="@+id/code_edit_text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/smoke_white_edittext_stoke"
            android:gravity="center"
            android:hint="@string/Code"
            android:inputType="numberPassword"
            android:letterSpacing="1"
            android:maxLength="6"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:singleLine="true" />

        <Button
            android:id="@+id/verify_Button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/Verify"
            android:textAllCaps="false"
            android:layout_marginTop="50dp"/>
        <com.mjs.skillassure.Utilities.LatoBlackText
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1:59"
            android:textColor="@color/shadow_black"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:textSize="14sp"/>
        <com.mjs.skillassure.Utilities.LatoSemiBoldText
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            android:textColor="@color/shadow_black"
            android:layout_height="wrap_content"
            android:text="@string/ResendCode"/>

        <com.mjs.skillassure.Utilities.LatoBoldText
            android:visibility="invisible"
            android:id="@+id/resend_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/sky_blue_dark"
            android:textSize="16sp"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/Resend"/>
    </LinearLayout>

</ScrollView>