<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PresentationLayer.Activities.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logoskillassure"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.082" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="26dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.0">

            <com.mjs.skillassure.Utilities.LatoBlackText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="@string/login"
                android:textColor="@color/shadow_black2"
                android:textSize="26sp" />

            <com.mjs.skillassure.Utilities.LatoSemiBoldText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/ProvideDetails"
                android:textColor="@color/shadow_black"
                android:textSize="18sp" />

            <com.mjs.skillassure.Utilities.LatoRegularText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/EmailAddress" />

            <com.mjs.skillassure.Utilities.LatoBoldEditText
                android:id="@+id/email_id"
                android:layout_width="match_parent"
                android:background="@drawable/smoke_white_edittext_stoke"
                android:layout_height="50dp"
                android:drawableStart="@drawable/ic_mail"
                android:drawablePadding="15dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginTop="20dp"
                android:hint="@string/Email_ID"
                android:inputType="textEmailAddress"
                android:singleLine="true" />

            <com.mjs.skillassure.Utilities.LatoBoldEditText
                android:id="@+id/password_toggle"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:hint="@string/Password"
                android:background="@drawable/smoke_white_edittext_stoke"
                android:layout_height="50dp"
                android:drawableStart="@drawable/ic_key"
                android:drawablePadding="15dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:passwordToggleEnabled="true"
                android:inputType="textPassword"
                android:singleLine="true" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="40dp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textSize="16sp" />

            <com.mjs.skillassure.Utilities.LatoSemiBoldText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/logingust"
                android:textColor="@color/shadow_black2"
                android:textSize="16sp" />

            <RelativeLayout
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/google_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_google" />

                    <com.mjs.skillassure.Utilities.LatoMediumText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/google"
                        android:textColor="@color/shadow_black2"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linkedin_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="end"
                    android:layout_marginEnd="0dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_linkedin" />

                    <com.mjs.skillassure.Utilities.LatoMediumText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/LinkedIn"
                        android:textColor="@color/shadow_black2"
                        android:textSize="14sp" />

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>