<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:gravity="center|bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/light_black_circle"
        android:contentDescription="@string/nav_header_desc"
        android:padding="2dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_app_logo_round" />

    <com.mjs.skillassure.Utilities.LatoBoldEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:textSize="16sp"
        android:textColor="@color/shadow_black2"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <com.mjs.skillassure.Utilities.LatoRegularText
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:textSize="14sp"
        android:gravity="center"
        android:textColor="@color/shadow_black"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_subtitle" />
</LinearLayout>